re PR middle-end/41250 (hppa has DECL_VALUE_EXPR decls appearing in the function)

2010-03-01  Richard Guenther  <rguenther@suse.de>
	Martin Jambor  <mjambor@suse.cz>

	PR middle-end/41250
	* gimplify.c (gimplify_body): Unset DECL_HAS_VALUE_EXPR_P on
	gimplified parameters.

Co-Authored-By: Martin Jambor <mjambor@suse.cz>

From-SVN: r157148